--- a/floriade.html
+++ b/floriade.html
@@ -10,9 +10,9 @@ Floriade
 <header> <img src="logo1.png" alt="bedrijfslogo" width="200" height="100" >
 <hr>
   <nav>
-    <a href="html/index.html"> De Floriade </a>
-    <br> <a href="html/info.html"> Informatie </a>
-  <br>   <a href="html/galerij.html"> Galerij </a>
+    <a href="index.html"> De Floriade </a>
+    <br> <a href="info.html"> Informatie </a>
+  <br>   <a href="galerij.html"> Galerij </a>
     </nav>
     <hr>
 
